corrected settings instantiation

--- a/widget.html
+++ b/widget.html
@@ -67,7 +67,7 @@
         var debug = false;
         var info = false;
         configureLog();
-        var settings;
+        var settings = {};
 
         // if (detectIE() !== false) {
         //     return WidgetHelpers.WidgetStatusHelper.Failure("IE not supported, please use Firefox or Chrome instead !");
