--- a/configuration.html
+++ b/configuration.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<script src="scripts/array-polyfill.js"></script>
 	<script src="bower_components/vss-web-extension-sdk/lib/VSS.SDK.min.js"></script>
 	<script type="text/javascript">
 		VSS.init({
