--- a/widget.html
+++ b/widget.html
@@ -19,6 +19,8 @@
             }
             catch (exception) {
                 console.log("unable to configure Log");
+                debug = true;
+				info = true;
             }
         }
 
