--- a/configuration.html
+++ b/configuration.html
@@ -19,8 +19,8 @@
 			}
 			catch (exception) {
 				console.log("Unable to configure Log");
-				debug = true;
-				info = true;
+				debug = false;
+				info = false;
 			}
 		}
 
