--- a/configuration.html
+++ b/configuration.html
@@ -3,7 +3,7 @@
 
 <head>
 	<script src="scripts/array-polyfill.js"></script>
-	<script src="bower_components/vss-web-extension-sdk/lib/VSS.SDK.min.js"></script>
+	<script src="scripts/VSS.SDK.min.js"></script>
 	<script type="text/javascript">
 		VSS.init({
 			explicitNotifyLoaded: true,
