--- a/widget.html
+++ b/widget.html
@@ -114,7 +114,7 @@
                                     queryTypeString = "Work items and direct links";
                                     break;
                             }
-                            logInfo("The type of query is: "=queryTypeString);
+                            logInfo("The type of query is: " + queryTypeString);
 
 
                             var queryResultCount = 0;
